correcao caminho css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tivo SaaS App Website Bootstrap HTML template</title>
-    <link rel="stylesheet" href="viwe/style.css">
+    <link rel="stylesheet" href="view/style.css">
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
