--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
                 <div class="img-container">
                     <img class="img-header" src="images/header.svg"
-                        alt="imagem que possui a representação em desenho de uma guia de navegador" height="600"
-                        width="700">
+                        alt="imagem que possui a representação em desenho de uma guia de navegador">
                 </div>
             </div>
         </div>
@@ -76,10 +75,10 @@
             <div class="row">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/description-icon-1.svg" widht:="180" height="130">
+                        <img class="img-description" src="images/description-icon-1.svg">
                     </div>
                     <div class="card-body">
-                        <h5 class="h5-title">List Builder</h5>
+                        <h5 class="card-title">List Builder</h5>
                         <p class="subtitle-card">It's very easy to start creating email lists for your marketing
                             actions. Just create your Tivo account</p>
                     </div>
@@ -87,10 +86,10 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/description-icon-2.svg" widht:="200" height="130">
+                        <img class="img-description" src="images/description-icon-2.svg">
                     </div>
                     <div class="card-body">
-                        <h5 class="h5-title">Campaign Tracker</h5>
+                        <h5 class="card-title">Campaign Tracker</h5>
                         <p class="subtitle-card">Campaigns is a feature we've developed since the beginning because it's
                             at the core of Tivo's functionalities</p>
                     </div>
@@ -98,10 +97,10 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/description-icon-3.svg" widht:="200" height="130">
+                        <img class="img-description" src="images/description-icon-3.svg">
                     </div>
                     <div class="card-body">
-                        <h5 class="h5-title">Analytics Tool</h5>
+                        <h5 class="card-title">Analytics Tool</h5>
                         <p class="subtitle-card">Tivo collects customer data in order to help you analyse different
                             situations and take required action</p>
                     </div>
@@ -141,8 +140,10 @@
 
             <div class="link-container">
                 <h4 class="footer-title">Links</h4>
-                <p class="footer-text">Pages: Article, Sign Up, Log In, Terms, Privacy
-                    Menu: Home, Features, Details, Pricing</p>
+                <p class="footer-text">
+                    Pages:<a href="#"> Article, Sign Up, Log In, Terms, Privacy</a>
+                    Menu:<a href="#"> Home, Features, Details, Pricing</a>
+                </p>
             </div>
 
             <div class="contact-container">
@@ -150,7 +151,7 @@
                 <p class="footer-text">
                     <i class="fas fa-map-marker-alt"></i> 22 Innovative, San Francisco, CA 94043, US
                     <br>
-                    <i class="fas fa-envelope"></i> contact@tivo.com | support@tivo.com
+                    <i class="fas fa-envelope"></i><a href="mailto:contact@tivo.com"> contact@tivo.com</a> | <a href="mailto:contact@tivo.com">support@tivo.com</a>
                 </p>
             </div>
         </div>
