--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 
 <body>
     <nav class="navbar-main">
+        <input type="checkbox" id="check">
+
+        <label for="check" class="checkbutton">
+            <i class="fas fa-bars"></i>
+        </label>
+
         <a href="#logo"><img class="logo-tivo" src="images/logo.svg" alt="logo que contem o nome do site" height="30"
-                width="76"></a>
+                width="76">
+        </a>
 
         <ul class="top-menu-horizontal">
             <li><a class="item-home" href="#"><strong>Home</strong></a></li>
@@ -22,20 +29,25 @@
             <li><a class="item" href="#pricing"><b>Pricing</b></a></li>
             <li><a class="item" href="#"><b>Drop </b><i class="fas fa-caret-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a class="item-dropdown" href="#signup">Sign Up</a></li>
-                    <li><a class="item-dropdown" href="#login">Log In</a></li>
-                    <li><a class="item-dropdown" href="#articledetails">Article Details</a></li>
-                    <li><a class="item-dropdown" href="#termsconditions">Terms Conditions</a></li>
-                    <li><a class="item-dropdown" href="#privacypolicy">Privacy Policy</a></li>
+                    <li><a class="item-dropdown" href="#signup"><b>Sign Up</b></a></li>
+                    <hr>
+                    <li><a class="item-dropdown" href="#login"><b>Log In</b></a></li>
+                    <hr>
+                    <li><a class="item-dropdown" href="#articledetails"><b>Article Details</b></a></li>
+                    <hr>
+                    <li><a class="item-dropdown" href="#termsconditions"><b>Terms Conditions</b></a></li>
+                    <hr>
+                    <li><a class="item-dropdown" href="#privacypolicy"><b>Privacy Policy</b></a></li>
                 </ul>
             </li>
+
             <button class="btn-login"><strong>Log In</strong></button>
         </ul>
     </nav>
 
     <header>
         <div class="container">
-            <div class="row">
+            <div class="row-2">
                 <div class="text-container">
                     <h1><b>SaaS App Web HTML Template</b></h1>
                     <p class="text-information">
@@ -72,7 +84,7 @@
                 <h2>Marketing Automation Will Bring A Lot More Qualified Leads</h2>
             </div>
 
-            <div class="row">
+            <div class="row-3">
                 <div class="card">
                     <div class="card-image">
                         <img class="img-description" src="images/description-icon-1.svg">
@@ -110,7 +122,7 @@
 
         <button class="btn-subscribe">
             <b>Subscribe</b>
-        </div>
+            </div>
     </section>
 
     <!-- <div class="footer-decoration">
@@ -129,9 +141,9 @@
                 transform="translate(0 -290.766)" />
         </svg>
     </div> -->
-    
+
     <footer>
-        <div class="row">
+        <div class="row-3">
             <div class="about-container">
                 <h4 class="footer-title">About Cedo</h4>
                 <p class="footer-text">Tivo is a Bootstrap HTML template created for SaaS app websites with modern
@@ -151,7 +163,8 @@
                 <p class="footer-text">
                     <i class="fas fa-map-marker-alt"></i> 22 Innovative, San Francisco, CA 94043, US
                     <br>
-                    <i class="fas fa-envelope"></i><a href="mailto:contact@tivo.com"> contact@tivo.com</a> | <a href="mailto:contact@tivo.com">support@tivo.com</a>
+                    <i class="fas fa-envelope"></i><a href="mailto:contact@tivo.com"> contact@tivo.com</a> | <a
+                        href="mailto:contact@tivo.com">support@tivo.com</a>
                 </p>
             </div>
         </div>
