--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Tivo SaaS App Website Bootstrap HTML template</title>
     <link rel="stylesheet" href="view/style.css">
     <link rel="icon" href="images/favicon.png">
@@ -65,13 +67,6 @@
             </div>
         </div>
 
-        <!-- <svg class="header-decoration" data-name="Layer 3" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 305.139">
-            <defs>
-                <style>.cls-1{fill:#ffffff;}</style>
-            </defs>
-            <title>header-decoration</title>
-            <path class="cls-1" d="M1486.486,36.773C1434.531,13.658,1401.068-5.1,1329.052,1.251c-92.939,8.2-152.759,70.189-180.71,89.478-23.154,15.979-134.286,104.091-171.753,128.16-50.559,32.48-98.365,59.228-166.492,67.5-67.648,8.21-124.574-6.25-152.992-18-42.218-17.454-42.218-17.454-90-39-35.411-15.967-81.61-34.073-141.58-34.054-116.6.037-262.78,77.981-354.895,80.062C53.1,275.793,22.75,273.566,0,260.566v44.573H1920V61.316c-36.724,23.238-76.008,61.68-177,65C1655.415,129.2,1556.216,67.8,1486.486,36.773Z" transform="translate(0 0)"/>
-        </svg> -->
     </header>
 
     <section>
@@ -124,23 +119,6 @@
             <b>Subscribe</b>
             </div>
     </section>
-
-    <!-- <div class="footer-decoration">
-        <svg class="footer-frame" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none"
-            viewBox="0 0 1920 115.984">
-            <defs>
-                <style>
-                    .cls-2 {
-                        fill: #5f4dee;
-                    }
-                </style>
-            </defs>
-            <title>footer-frame</title>
-            <path class="cls-2"
-                d="M1616.28,381.705c-87.656,5.552-93.356-59.62-197.369-67.562-112.391-8.581-137.609,65.077-251.189,60.632-109.57-4.288-116.156-74.017-225.25-83.153-125.171-10.483-150,78.5-293,88.35-136.948,9.437-173.108-68.092-320.83-77.956C255.5,297.133,143,308.1,0,395.564V406.75H1920V324.537c-18-6.507-43.63-14.492-76.1-15.591C1740.655,305.452,1705.829,376.033,1616.28,381.705Z"
-                transform="translate(0 -290.766)" />
-        </svg>
-    </div> -->
 
     <footer>
         <div class="row-3">
